# Synthwave

./: .gitignore  CONTRIBUTING.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: build.yml  lint.yml  test.yml
codex/: CHANGELOG_DRAFT.md  CHECKPOINTS.md  DECISIONS.md  PLAN.md  SESSION_LOG.md  VERIFICATION.md
docs/: implementation-audit.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs
src-tauri/src/ai/: classifier.rs  mod.rs  ollama.rs
src-tauri/src/audio/: analysis.rs  beat.rs  capture.rs  file_player.rs  mod.rs  ring_buffer.rs  types.rs
src-tauri/src/config/: settings.rs
src/components/: Controls.tsx  InfoOverlay.tsx  SettingsDrawer.tsx  ToastContainer.tsx  Visualizer.tsx  WelcomeModal.tsx
src/gl/: audioTexture.ts  bloom.ts  framebuffer.ts  math.ts  particles.ts  renderer.ts  shaderProgram.ts
src/hooks/: useAudioStream.ts  useClassification.ts  useFileDrop.ts  useKeyboardShortcuts.ts  useRecorder.ts  useRenderLoop.ts  useWebGL.ts
src/shaders/: bars.frag  bars.vert  bloom_blur.frag  bloom_composite.frag  bloom_extract.frag  circular.frag  fullscreen.vert  nebula.frag  particles_render.frag  particles_render.vert  particles_update.vert  starfield.frag  terrain.frag  terrain.vert  transition.frag  waveform.vert
src/stores/: audioStore.ts  canvasRefStore.ts  settingsStore.ts  toastStore.ts  visualStore.ts
src/test/: setup.ts
src/themes/: index.ts
src/types/: audio.ts  settings.ts
src/utils/: screenshot.ts
(+4 files in other folders)
