[package]
name = "synthwave"
version = "0.1.0"
description = "Desktop audio visualizer with GPU-accelerated WebGL 2 visuals"
authors = ["you"]
edition = "2021"

[lib]
name = "synthwave_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
cpal = "0.15"
rustfft = "6"
apodize = "1"
ringbuf = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dirs = "6"
symphonia = { version = "0.5", features = ["mp3", "aac", "ogg", "flac", "wav", "pcm"] }

